--- a/templates/Drowning.html
+++ b/templates/Drowning.html
@@ -13,7 +13,7 @@
 
 <body>
   <nav class="light-blue lighten-1" role="navigation">
-    <div class="nav-wrapper container" ><a id="logo-container" href="#" class="brand-logo">Saurabh Kumar, Arpit Singh, Manan Gupta, Ria Soam; COE12</a>
+    <div class="nav-wrapper container" ><a id="logo-container" href="#" class="brand-logo">Ria Soam; COE12</a>
     </div>
   </nav>
 
